# mcab

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  mkdocs_requirements.txt  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml  docs_deploy.yml  publish.yml  pypi_publish.yml
about/: index.html
about2/: index.html
api/: index.html
api/core/: index.html
api/effects/: index.html
api/mstats/: index.html
api/plots/: index.html
api/transform/: index.html
api/utils/: index.html
benchmark/: _bench_worker.py  mcab_benchmark.py
docs/: README.md  about.md  about2.md  index.md  tutorial.md
docs/api/: core.md  effects.md  index.md  mstats.md  plots.md  transform.md  utils.md
docs/guide/: 00_index.md  01_why_monte_carlo.ipynb  03_type_one_error.ipynb  04_reproducibility_seeds.ipynb  06_power_mde_n.ipynb  07_non_randomized.ipynb  10_multiple_testing.ipynb  11_empirical_tests.ipynb  12_recipes.ipynb  index.md
docs/ru/: index.md
docs/stylesheets/: extra.css
docs/tutorial/: 01_first_steps.ipynb  02_data_and_effects.ipynb  03_variance_reduction.ipynb  04_multiple_corrections.ipynb
guide/: index.html
guide/00_index/: index.html
guide/01_why_monte_carlo/: 01_why_monte_carlo.ipynb  index.html
guide/02_load_your_data/: 02_load_your_data.ipynb  index.html
guide/03_type_one_error/: index.html
guide/04_reproducibility_seeds/: index.html
guide/05_effect_injection/: 05_effect_injection.ipynb  index.html
guide/06_power_mde_n/: index.html
guide/07_non_randomized/: index.html
guide/08_power_boosting/: 08_power_boosting.ipynb  index.html
guide/09_compare_setups/: 09_compare_setups.ipynb  index.html
guide/10_multiple_testing/: index.html
guide/11_empirical_tests/: index.html
guide/12_recipes/: index.html
javascripts/: mathjax.js
mcab/: __init__.py  core.py  mstats.py  tests.py  tests_exact_expectations.csv  transform.py
ru/: index.html
search/: search_index.json
src/mcab/: __init__.py  core.py  effects.py  mstats.py  plots.py  tests.py  tests_exact_expectations.csv  transform.py
stylesheets/: extra.css
tutorial/: index.html
tutorial/01_first_steps/: 01_first_steps.ipynb  index.html
tutorial/02_data_and_effects/: index.html
tutorial/03_variance_reduction/: index.html
tutorial/04_multiple_corrections/: index.html
